# Colodex

./: CMakeLists.txt  README.md  conanfile.txt
.github/workflows/: ci.yml
inc/colodex/: channel.h  client.h  utils.h  video.h
inc/internal/: channel.h  client.h
src/: CMakeLists.txt  channel.c  client.c  utils.c  video.c
test/: CMakeLists.txt  test.c  test.cpp
